@@ -1,10 +1,10 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2010-03-04 15:46
+// This file was generated on 2010-09-07 15:26
 
 $extensionPath = t3lib_extMgm::extPath('contactslist');
 return array(
+	'tx_contactslist_pi1test' => $extensionPath . 'Tests/pi1Test.php',
 	'tx_contactslist_pi1' => $extensionPath . 'pi1/class.tx_contactslist_pi1.php',
-	'tx_contactslist_pi1_testcase' => $extensionPath . 'tests/tx_contactslist_pi1_testcase.php',
 );
 ?>
