@@ -1,4 +1,5 @@
 1.0.0 - currently working on
+- [#4047] Cleanup: Rename all test classes from *_testcase to *Test
 - [#3434] Cleanup: Replace false/true with FALSE/TRUE
 - [#3729] Change: Provide ext_autoload for our extensions
 - [#3641] Change: Update all copyrights to 2010
